--- a/views/menu/insertMenuJson.ejs
+++ b/views/menu/insertMenuJson.ejs
@@ -44,44 +44,50 @@
     <%- include ("../partials/navigation.ejs"); %>
 
 
-    <div class="container">
-        <div class="cardInside2">
-        <h1><%= items.myObject.menu.title %></h1>
-    </div>
-        <%- include ("../partials/message.ejs"); %>
-        <div class="cardJson">
-            <br>
-
-            <p class="ejemplo"><%= items.myObject.jsonMenu.ejemplo %></p>
-            <div class="d-flex justify-content-center align-items-center p-3 texto">
-            <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
+        <div class="container">
+            <div class="cardInside2">
+                <h1>
+                    <%= items.myObject.menu.title %>
+                </h1>
             </div>
-           
+            <%- include ("../partials/message.ejs"); %>
+                <div class="cardJson">
+                    <br>
 
-            <form method="POST" enctype="multipart/form-data">
-                <div class="form-group">
+                    <p class="ejemplo">
+                        <%= items.myObject.jsonMenu.ejemplo %>
+                    </p>
+                    <div class="d-flex justify-content-center align-items-center p-3 texto">
+                        <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
+                    </div>
 
-                    <br> <br>
-                    <i class="fas fa-file-upload fa-3x m-auto text-info">
-                        <label for="avatar"><%= items.myObject.jsonMenu.label %></label><br></i>
-                    <br> <br>
 
-                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename" >
-                    <br><br>
-                    
-                    <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+                    <form method="POST" enctype="multipart/form-data">
+                        <div class="form-group">
 
+                            <br> <br>
+                            <i class="fas fa-file-upload fa-3x m-auto text-info">
+                                <label for="avatar">
+                                    <%= items.myObject.jsonMenu.label %>
+                                </label><br></i>
+                            <br> <br>
+
+                            <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
+                            <br><br>
+
+                            <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+
+                        </div>
+                    </form>
+
+
+                    <br>
                 </div>
-            </form>
-            
-
-            <br>
+                <br>
         </div>
-        <br>
-    </div>
 
-    <%- include ("../partials/footer.ejs"); %>
-</body >
+        <%- include ("../partials/footer.ejs"); %>
+</body>
 
 
 
