--- a/views/dish/dishDetails.ejs
+++ b/views/dish/dishDetails.ejs
@@ -37,91 +37,116 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
 
-    <div class="container">
-        <div class="infoPage">
-            <i class="fas fa-list-alt fa-2x"></i>
+        <div class="container">
+            <div class="infoPage">
+                <i class="fas fa-list-alt fa-2x"></i>
 
-            <span> <%= items.myDocs._id %> </span>
-        </div>
-        <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
+                <span>
+                    <%= items.myDocs._id %>
+                </span>
+            </div>
+            <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
 
-        <div class="row justify-content-between">
+            <div class="row justify-content-between">
 
-            <div class="col-8" style="margin-top: 35px;">
-                <p class="descriptionDish"> <%= items.myDocs.description %> </p>
-                <p class="descriptionDish"> Categorías del plato: |
-                    <% for (let i = 0; i < items.myDocs.categories.length; i++) { %>
-                    <%= items.myDocs.categories[i] %> |
-                    <% } %>
-                </p>
+                <div class="col-8" style="margin-top: 35px;">
+                    <p class="descriptionDish">
+                        <%= items.myDocs.description %>
+                    </p>
+                    <p class="descriptionDish"> Categorías del plato: |
+                        <% for (let i=0; i < items.myDocs.categories.length; i++) { %>
+                            <%= items.myDocs.categories[i] %> |
+                                <% } %>
+                    </p>
 
-                <% if (items.myDocs.recipe === "") { %>
-                <button type="button" class="btn btn-info"><a title="Ver receta"
-                        href="https://www.cocinacaserayfacil.net/recetas-sanas-faciles/"><%= items.myObject.recipeDish%></a></button>
-                <% } else{ %>
-                <button type="button" class="btn btn-info"><a title="Ver receta"
-                        href="<%= items.myDocs.recipe %>"><%= items.myObject.recipeDish%></a></button>
-                <% } %>
+                    <% if (items.myDocs.recipe==="" ) { %>
+                        <button type="button" class="btn btn-info"><a title="Ver receta"
+                                href="https://www.cocinacaserayfacil.net/recetas-sanas-faciles/">
+                                <%= items.myObject.recipeDish%>
+                            </a></button>
+                        <% } else{ %>
+                            <button type="button" class="btn btn-info"><a title="Ver receta"
+                                    href="<%= items.myDocs.recipe %>">
+                                    <%= items.myObject.recipeDish%>
+                                </a></button>
+                            <% } %>
 
+
+                </div>
+                <div class="col-3.5 divImg">
+                    <img class="imageDish" src="<%= items.myDocs.imageURL %>" alt="<%= items.myObject.title %> ">
+                </div>
 
             </div>
-            <div class="col-3.5 divImg">
-                <img class="imageDish" src="<%= items.myDocs.imageURL %>" alt="<%= items.myObject.title %> ">
+            <div class="cardInside3">
+                <span class="detailsSpan">
+                    <%= items.myObject.ingredientesDish %>
+                </span>
             </div>
 
-        </div>
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.ingredientesDish %></span>
-        </div>
+            <table class="table table-striped table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (let i=0; i < items.myObject.dishDetails.length; i++) {%>
+                            <th scope="col">
+                                <%= items.myObject.dishDetails[i] %>
+                            </th>
+                            <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
 
-        <table class="table table-striped table-bordered table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (let i=0; i < items.myObject.dishDetails.length; i++) {%>
-                    <th scope="col"><%= items.myObject.dishDetails[i] %> </th>
+                        <% for (let i=0; i < items.myDocs.ingredients.length; i++) { %>
+                    </tr>
+
+                    <td>
+                        <%= items.myDocs.ingredients[i].name %>
+                    </td>
+                    <td>
+                        <%= items.myDocs.ingredients[i].amount %>
+                            <%= items.myDocs.ingredients[i].unitMeasure %>
+                    </td>
+                    <td>
+                        <%= items.myNutIngredients[i][0]["energ_kcal"] %>
+                    </td>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
 
-                    <% for (let i=0; i < items.myDocs.ingredients.length; i++) { %>
-                </tr>
+                </tbody>
+            </table>
+            <div class="cardInside3">
+                <span class="detailsSpan">
+                    <%= items.myObject.nutrients %>
+                </span>
+            </div>
 
-                <td><%= items.myDocs.ingredients[i].name %> </td>
-                <td><%= items.myDocs.ingredients[i].amount %> <%= items.myDocs.ingredients[i].unitMeasure %> </td>
-                <td><%= items.myNutIngredients[i][0]["energ_kcal"] %> </td>
-                <% } %>
 
-            </tbody>
-        </table>
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.nutrients %></span>
+            <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
+
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
+                            <th>
+                                <%= items.myObject.tablaPlatos.nutrientes[i] %>
+                            </th>
+                            <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+
+                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
+                            <td>
+                                <%= items.myNutrients[items.myObject.tablaPlatos.nutrientesValue[i]] %>
+                            </td>
+                            <% } %>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+
         </div>
-
-
-        <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
-
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
-                    <th><%= items.myObject.tablaPlatos.nutrientes[i] %> </th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
-                    <td><%= items.myNutrients[items.myObject.tablaPlatos.nutrientesValue[i]] %> </td>
-                    <% } %>
-                </tr>
-            </tbody>
-        </table>
-        <br>
-
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
