--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -45,79 +45,98 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <div class="container">
-        <div class="infoPage">
-            <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myObject.infoPage.platos %> </span>
-        </div>
-        <hr style="border-color: rgb(46, 115, 124);">
-        <br>
-        <%- include ("../partials/message.ejs"); %>
-        <br>
-        <form method="POST">
-            <div class="wrap">
-                <div class="search">
-                    <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
-                    <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="spanColor searchButton">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
+        <div class="container">
+            <div class="infoPage">
+                <i class="fas fa-list-alt fa-2x"></i>
+                <span>
+                    <%= items.myObject.infoPage.platos %>
+                </span>
             </div>
-        </form>
-        <br><br>
+            <hr style="border-color: rgb(46, 115, 124);">
+            <br>
+            <%- include ("../partials/message.ejs"); %>
+                <br>
+                <form method="POST">
+                    <div class="wrap">
+                        <div class="search">
+                            <input type="text" name="_id" class="searchTerm"
+                                placeholder="<%= items.myObject.busqueda %>">
+                            <a id="submit-form-link" href="#"></a>
+                            <button type="submit" class="spanColor searchButton">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+                <br><br>
 
 
-        <% const  nombres_sz=  items.myObject.tablaPlatos.nombres.length %>
-        <% const  nombres=  items.myObject.tablaPlatos.nombres %>
-        <% const  docs_sz =   items.myDocs.length %>
-        <% const  docs =   items.myDocs %>
+                <% const nombres_sz=items.myObject.tablaPlatos.nombres.length %>
+                    <% const nombres=items.myObject.tablaPlatos.nombres %>
+                        <% const docs_sz=items.myDocs.length %>
+                            <% const docs=items.myDocs %>
 
 
-        <div class="cardInside3">
-            <table id="platos" class="table table-bordered table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <% for (var i=0; i< nombres_sz; i++) { %>
-                        <th><%= nombres[i] %></th>
-                        <% } %>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <% for (var i=0; i < docs_sz; i++) { %>
-                        <td> <%= docs[i]._id %> </td>
-                        <td> <%= items.myKcal[i] %> </td>
-                        <% if (items.req.user.rol === "default"){ %>
-                        <td>
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/dish/details/?name=<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/dish/download/<%=docs[i]['_id']%>"><i
-                                        class="far fa-file-alt"></i></a></button>
-                        </td>
-                        <% } else {%>
+                                <div class="cardInside3">
+                                    <table id="platos" class="table table-bordered table-hover table-sm">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <% for (var i=0; i< nombres_sz; i++) { %>
+                                                    <th>
+                                                        <%= nombres[i] %>
+                                                    </th>
+                                                    <% } %>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <% for (var i=0; i < docs_sz; i++) { %>
+                                                    <td>
+                                                        <%= docs[i]._id %>
+                                                    </td>
+                                                    <td>
+                                                        <%= items.myKcal[i] %>
+                                                    </td>
+                                                    <% if (items.req.user.rol==="default" ){ %>
+                                                        <td>
+                                                            <button type="button" class="btn btn-info"><a
+                                                                    title="Ver detalles"
+                                                                    href="/dish/details/?name=<%=docs[i]['_id']%>"><i
+                                                                        class="fas fa-search-plus"></i></a></button>
+                                                            <button type="button" class="btn btn-success"><a
+                                                                    title="Descargar"
+                                                                    href="/dish/download/<%=docs[i]['_id']%>"><i
+                                                                        class="far fa-file-alt"></i></a></button>
+                                                        </td>
+                                                        <% } else {%>
 
-                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
-                                    href="/dish/delete/<%=docs[i]['_id']%>"> <i
-                                        class="fas fa-trash-alt"></i></a></button>
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/dish/details/?name=<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-warning"><a title="Editar"
-                                    href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/dish/download/<%=docs[i]['_id']%>"><i
-                                        class="far fa-file-alt"></i></a></button></td>
-                        <% } %>
-                    </tr>
-                    <% } %>
-                </tbody>
-            </table>
+                                                            <td> <button type="button" class="btn btn-danger"><a
+                                                                        title="Eliminar"
+                                                                        href="/dish/delete/<%=docs[i]['_id']%>"> <i
+                                                                            class="fas fa-trash-alt"></i></a></button>
+                                                                <button type="button" class="btn btn-info"><a
+                                                                        title="Ver detalles"
+                                                                        href="/dish/details/?name=<%=docs[i]['_id']%>"><i
+                                                                            class="fas fa-search-plus"></i></a></button>
+                                                                <button type="button" class="btn btn-warning"><a
+                                                                        title="Editar"
+                                                                        href="/dish/update/<%=docs[i]['_id']%>"><i
+                                                                            class="fas fa-edit"></i></a></button>
+                                                                <button type="button" class="btn btn-success"><a
+                                                                        title="Descargar"
+                                                                        href="/dish/download/<%=docs[i]['_id']%>"><i
+                                                                            class="far fa-file-alt"></i></a></button>
+                                                            </td>
+                                                            <% } %>
+                                            </tr>
+                                            <% } %>
+                                        </tbody>
+                                    </table>
 
+                                </div>
+                                <br>
         </div>
-        <br>
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 <script>
