--- a/views/dish/insertDishJson.ejs
+++ b/views/dish/insertDishJson.ejs
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
 
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -44,48 +44,54 @@
 </head>
 
 <body class="jsonBody">
-    
+
     <%- include ("../partials/navigation.ejs"); %>
 
 
-    <div class="container">
-        <div class="cardInside2">
-        <h1><%= items.myObject.dish.title %></h1>
-        </div>
-        <%- include ("../partials/message.ejs"); %>
-        <div class="cardJson">
-            <br>
-
-            <p class="ejemplo"><%= items.myObject.jsonDish.ejemplo %></p>
-            <div class="d-flex justify-content-center align-items-center p-3 texto">
-            <textarea name="textarea" class="textarea" rows="12" disabled><%= items.json %></textarea>
+        <div class="container">
+            <div class="cardInside2">
+                <h1>
+                    <%= items.myObject.dish.title %>
+                </h1>
             </div>
-           
+            <%- include ("../partials/message.ejs"); %>
+                <div class="cardJson">
+                    <br>
 
-            <form method="POST" enctype="multipart/form-data">
-                <div class="form-group">
+                    <p class="ejemplo">
+                        <%= items.myObject.jsonDish.ejemplo %>
+                    </p>
+                    <div class="d-flex justify-content-center align-items-center p-3 texto">
+                        <textarea name="textarea" class="textarea" rows="12" disabled><%= items.json %></textarea>
+                    </div>
 
-                    <br> <br>
-                    <i class="fas fa-file-upload fa-3x m-auto text-info">
-                        <label for="avatar"><%= items.myObject.jsonDish.label %></label><br></i>
-                    <br> <br>
 
-                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename" >
-                    <br><br>
-                    
-                    <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+                    <form method="POST" enctype="multipart/form-data">
+                        <div class="form-group">
 
+                            <br> <br>
+                            <i class="fas fa-file-upload fa-3x m-auto text-info">
+                                <label for="avatar">
+                                    <%= items.myObject.jsonDish.label %>
+                                </label><br></i>
+                            <br> <br>
+
+                            <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
+                            <br><br>
+
+                            <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+
+                        </div>
+                    </form>
+
+
+                    <br>
                 </div>
-            </form>
-            
-
-            <br>
+                <br>
         </div>
-        <br>
-    </div>
 
-    <%- include ("../partials/footer.ejs"); %>
-</body >
+        <%- include ("../partials/footer.ejs"); %>
+</body>
 
 
 
