--- a/views/evaluation/createEvaluation.ejs
+++ b/views/evaluation/createEvaluation.ejs
@@ -34,7 +34,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-  <!-- JS, Popper.js, and jQuery -->
+    <!-- JS, Popper.js, and jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -50,80 +50,92 @@
     <%- include ("../partials/navigation.ejs"); %>
 
 
-    <div class="container">
-        <div class="cardInside2">
-            <h1><%= items.myObject.evaluacion.title %></h1>
-        </div>
-        <br>
-        <%- include ("../partials/message.ejs"); %>
+        <div class="container">
+            <div class="cardInside2">
+                <h1>
+                    <%= items.myObject.evaluacion.title %>
+                </h1>
+            </div>
+            <br>
+            <%- include ("../partials/message.ejs"); %>
 
-        <div class="card">
-            <form method="POST" , id="aux" action=''>
-                <% for (var i=0; i< items.myObject.evaluacion.recomendacion.length; i++) { %>
-                <div class="col-sm">
-                    <label class="myLabels"><%= items.myObject.evaluacion.recomendacion[i].label %><span
-                            class="required">*</span></label>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class=" spanColor input-group-text"><i
-                                    class="  myIcons <%= items.myObject.evaluacion.recomendacion[i].icon %>"></i></span>
-                        </div>
+                <div class="card">
+                    <form method="POST" , id="aux" action=''>
+                        <% for (var i=0; i< items.myObject.evaluacion.recomendacion.length; i++) { %>
+                            <div class="col-sm">
+                                <label class="myLabels">
+                                    <%= items.myObject.evaluacion.recomendacion[i].label %><span
+                                            class="required">*</span>
+                                </label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class=" spanColor input-group-text"><i
+                                                class="  myIcons <%= items.myObject.evaluacion.recomendacion[i].icon %>"></i></span>
+                                    </div>
 
-                        <select required id="recomendacion" class="mySelects form-control"
-                            name="<%= items.myObject.evaluacion.recomendacion[i].name %>">
-                            <% for (var j=0; j< items.myRecommendations.length; j++) { %>
-                            <option value="<%= items.myRecommendations[j]["_id"] %>">
-                                <%= items.myRecommendations[j]["_id"] %> </option>
+                                    <select required id="recomendacion" class="mySelects form-control"
+                                        name="<%= items.myObject.evaluacion.recomendacion[i].name %>">
+                                        <% for (var j=0; j< items.myRecommendations.length; j++) { %>
+                                            <option value="<%= items.myRecommendations[j][" _id"] %>">
+                                                <%= items.myRecommendations[j]["_id"] %>
+                                            </option>
+                                            <% } %>
+                                    </select>
+                                </div>
+                            </div>
                             <% } %>
-                        </select>
-                    </div>
+
+                                <% for (var i=0; i< items.myObject.evaluacion.form.length; i++) { %>
+                                    <div class="col-sm">
+                                        <label class="myLabels">
+                                            <%= items.myObject.evaluacion.form[i].label %><span
+                                                    class="required">*</span>
+                                        </label>
+                                        <div class="input-group mb-3">
+                                            <div class="input-group-prepend">
+                                                <span class=" spanColor input-group-text"><i
+                                                        class="  myIcons <%= items.myObject.evaluacion.form[i].icon %>"></i></span>
+                                            </div>
+
+                                            <select required id="lista1" class="mySelects form-control"
+                                                name="<%= items.myObject.evaluacion.form[i].name %>">
+                                                <% for (var j=0; j< items.myObject.evaluacion.form[i].options.length;
+                                                    j++) { %>
+                                                    <option value=<%=j%>>
+                                                        <%= items.myObject.evaluacion.form[i].options[j] %>
+                                                    </option>
+                                                    <% } %>
+                                            </select>
+
+                                        </div>
+                                    </div>
+                                    <% } %>
+
+                                        <div class="lista2" id="lista2"
+                                            style="padding-left: 16px; padding-right: 16px; ">
+                                            <select required class='mySelect form-control' id="select2"></select>
+                                        </div>
+                                        <br>
+                                        <div id="cardInside" class="cardInsideVal" style="display: none;"></div>
+
+                                        <br>
+                                        <div class="requiredSpan">
+                                            <span class="text-muted requiredSpan">
+                                                <%= items.myObject.required %>
+                                            </span><span class="required">*</span>
+                                        </div>
+                                        <br>
+                                        <input style="margin-left: 16px;" type="submit" id="mySubmit"
+                                            class="btn btn-info" value="Submit" />
+
+
+                    </form>
                 </div>
-                <% } %>
-
-                <% for (var i=0; i< items.myObject.evaluacion.form.length; i++) { %>
-                <div class="col-sm">
-                    <label class="myLabels"><%= items.myObject.evaluacion.form[i].label %><span
-                            class="required">*</span></label>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class=" spanColor input-group-text"><i
-                                    class="  myIcons <%= items.myObject.evaluacion.form[i].icon %>"></i></span>
-                        </div>
-
-                        <select required id="lista1" class="mySelects form-control"
-                            name="<%= items.myObject.evaluacion.form[i].name %>">
-                            <% for (var j=0; j< items.myObject.evaluacion.form[i].options.length; j++) { %>
-                            <option value=<%= j%>>
-                                <%= items.myObject.evaluacion.form[i].options[j] %> </option>
-                            <% } %>
-                        </select>
-
-                    </div>
-                </div>
-                <% } %>
-
-                <div class="lista2" id="lista2" style="padding-left: 16px; padding-right: 16px; ">
-                    <select required class='mySelect form-control' id="select2"></select>
-                </div>
-                <br>
-                <div id="cardInside" class="cardInsideVal" style="display: none;"></div>
-
-                <br>
-                <div class="requiredSpan">
-                    <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
-                        class="required">*</span>
-                </div>
-                <br>
-                <input style="margin-left: 16px;" type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
 
 
-            </form>
+                <br><br>
         </div>
-
-
-        <br><br>
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 
 
 
