--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,19 @@
     <link rel="shortcut icon" href="https://doorcountypulse.com/wp-content/uploads/2020/03/forkspoon.png">
     <meta charset="UTF-8">
 
-<!-- CSS only -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<!-- JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -20,67 +27,83 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
 </head>
 
 <body>
     <%- include ("partials/navigation.ejs"); %>
-    <main role="main">
-        <div class="jumbotron">
-            <div class="jilorioInfo">
-                <h1 class="display-4"><%= items.myObject.jilorioInfo[0].home.title %></h1>
-                <p><%= items.myObject.jilorioInfo[0].home.description %></p>
-                <p  style="text-align: center;"><a class="btn btn-primary btn-lg" href="<%= items.myObject.jilorioInfo[0].home.href %>"
-                        role="button"><%= items.myObject.jilorioInfo[0].home.text %> &raquo;</a></p>
+        <main role="main">
+            <div class="jumbotron">
+                <div class="jilorioInfo">
+                    <h1 class="display-4">
+                        <%= items.myObject.jilorioInfo[0].home.title %>
+                    </h1>
+                    <p>
+                        <%= items.myObject.jilorioInfo[0].home.description %>
+                    </p>
+                    <p style="text-align: center;"><a class="btn btn-primary btn-lg"
+                            href="<%= items.myObject.jilorioInfo[0].home.href %>" role="button">
+                            <%= items.myObject.jilorioInfo[0].home.text %> &raquo;
+                        </a></p>
+                </div>
             </div>
-        </div>
-        <div class="container">
-            <section class="features-icons text-center">
-                <div class="row">
-                    <% for (var i=0; i< items.myObject.homeIndex.length/2; i++) { %>
-                    <div class="col-md-4">
-                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 290px;">
-                            <div class="features-icons-icon d-flex">
-                                <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+            <div class="container">
+                <section class="features-icons text-center">
+                    <div class="row">
+                        <% for (var i=0; i< items.myObject.homeIndex.length/2; i++) { %>
+                            <div class="col-md-4">
+                                <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 290px;">
+                                    <div class="features-icons-icon d-flex">
+                                        <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                                    </div>
+                                    <div class="feature features-icons-icon">
+                                        <%= items.myObject.homeIndex[i].name %>
+                                    </div>
+                                    <p class="text-justify">
+                                        <%= items.myObject.homeIndex[i].description %>
+                                    </p>
+                                </div>
+                                <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>" role="button">
+                                        <%= items.myObject.homeIndex[i].text %> &raquo;
+                                    </a></p>
+
                             </div>
-                            <div class="feature features-icons-icon"> <%= items.myObject.homeIndex[i].name %></div>
-                            <p class="text-justify"><%= items.myObject.homeIndex[i].description %> </p>
-                        </div>
-                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>"
-                                role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
-
+                            <% } %>
                     </div>
-                    <% } %>
-                </div>
 
-                <hr style="border-color: rgb(46, 115, 124);">
+                    <hr style="border-color: rgb(46, 115, 124);">
 
-                <div class="row">
+                    <div class="row">
 
-                    <% for (var i= items.myObject.homeIndex.length/2; i< items.myObject.homeIndex.length; i++) { %>
-                    <div class="col-md-4">
-                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 240px;">
-                            <div class="features-icons-icon d-flex">
-                                <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                        <% for (var i=items.myObject.homeIndex.length/2; i< items.myObject.homeIndex.length; i++) { %>
+                            <div class="col-md-4">
+                                <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 240px;">
+                                    <div class="features-icons-icon d-flex">
+                                        <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                                    </div>
+                                    <div class="feature features-icons-icon">
+                                        <%= items.myObject.homeIndex[i].name %>
+                                    </div>
+                                    <p class="text-justify">
+                                        <%= items.myObject.homeIndex[i].description %>
+                                    </p>
+                                </div>
+
+                                <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>" role="button">
+                                        <%= items.myObject.homeIndex[i].text %> &raquo;
+                                    </a></p>
                             </div>
-                            <div class="feature features-icons-icon"> <%= items.myObject.homeIndex[i].name %></div>
-                            <p class="text-justify"><%= items.myObject.homeIndex[i].description %> </p>
-                        </div>
-
-                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>"
-                                role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
+                            <% } %>
                     </div>
-                    <% } %>
-                </div>
 
-        </div>
+            </div>
 
-        </div>
-        <br>
-        </div>
+            </div>
+            <br>
+            </div>
 
-    </main>
-    <%- include ("partials/footer.ejs"); %>
+        </main>
+        <%- include ("partials/footer.ejs"); %>
 </body>
 
 
