--- a/views/menu/menuDetails.ejs
+++ b/views/menu/menuDetails.ejs
@@ -37,68 +37,86 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
 
-    <div class="container">
-        <div class="infoPage">
-            <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myDocs._id %> </span>
-        </div>
-        <hr style="border-color: rgb(46, 115, 124);">
-        <div class="cardInside2" style="margin-top: 50px;">
-        <div class="row justify-content-between">
-            <div class="col-8">
-                <p class="descriptionDish"> <%= items.myDocs.description %> </p>
+        <div class="container">
+            <div class="infoPage">
+                <i class="fas fa-list-alt fa-2x"></i>
+                <span>
+                    <%= items.myDocs._id %>
+                </span>
             </div>
+            <hr style="border-color: rgb(46, 115, 124);">
+            <div class="cardInside2" style="margin-top: 50px;">
+                <div class="row justify-content-between">
+                    <div class="col-8">
+                        <p class="descriptionDish">
+                            <%= items.myDocs.description %>
+                        </p>
+                    </div>
+                </div>
+                <div class="cardInside3">
+                    <span class="detailsSpan">
+                        <%= items.myObject.platosMenu %>
+                    </span>
+                </div>
+
+                <table class="table table-striped table-bordered table-hover table-sm">
+                    <thead class="thead-dark">
+                        <tr>
+                            <% for (let i=0; i < items.myObject.menuDetails.length; i++) {%>
+                                <th scope="col">
+                                    <%= items.myObject.menuDetails[i] %>
+                                </th>
+                                <% } %>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <% for (let i=0; i < items.myDocs.dishes.length; i++) { %>
+                        </tr>
+
+                        <td>
+                            <%= items.myDocs.dishes[i]._id %>
+                        </td>
+                        <td>
+                            <%= items.myKcalDishes[i] %>
+                        </td>
+                        <% } %>
+
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="cardInside3">
+                <span class="detailsSpan">
+                    <%= items.myObject.nutrientsMenu %>
+                </span>
+            </div>
+            <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
+
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
+                            <th>
+                                <%= items.myObject.tablaPlatos.nutrientes[i] %>
+                            </th>
+                            <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
+                            <td>
+                                <%= items.myNutrientsMenu[i] %>
+                            </td>
+                            <% } %>
+                    </tr>
+                </tbody>
+            </table>
+
+            <br>
+
         </div>
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.platosMenu %></span>
-        </div>
-
-        <table class="table table-striped table-bordered table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (let i=0; i < items.myObject.menuDetails.length; i++) {%>
-                    <th scope="col"><%= items.myObject.menuDetails[i] %> </th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (let i=0; i < items.myDocs.dishes.length; i++) { %>
-                </tr>
-
-                <td><%= items.myDocs.dishes[i]._id %> </td>
-                <td><%= items.myKcalDishes[i] %> </td>
-                <% } %>
-
-            </tbody>
-        </table>
-    </div>
-
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.nutrientsMenu %></span>
-        </div>
-        <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
-
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
-                    <th><%= items.myObject.tablaPlatos.nutrientes[i] %> </th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
-                    <td><%= items.myNutrientsMenu[i] %> </td>
-                    <% } %>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
