--- a/views/planification/getPlanification.ejs
+++ b/views/planification/getPlanification.ejs
@@ -42,112 +42,137 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <div class="container">
-        <div class="infoPage">
-            <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myObject.infoPage.planificacion %> </span>
-        </div>
-
-        <hr style="border-color: rgb(46, 115, 124);">
-        <br>
-        <form method="POST">
-            <div class="wrap">
-                <div class="search">
-                    <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
-                    <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="spanColor searchButton">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
+        <div class="container">
+            <div class="infoPage">
+                <i class="fas fa-list-alt fa-2x"></i>
+                <span>
+                    <%= items.myObject.infoPage.planificacion %>
+                </span>
             </div>
-        </form>
-        <br><br>
+
+            <hr style="border-color: rgb(46, 115, 124);">
+            <br>
+            <form method="POST">
+                <div class="wrap">
+                    <div class="search">
+                        <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
+                        <a id="submit-form-link" href="#"></a>
+                        <button type="submit" class="spanColor searchButton">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <br><br>
 
 
 
-        <% const  nombres_sz=  items.myObject.tablaPlanificacion.nombres.length %>
-        <% const  nombres=  items.myObject.tablaPlanificacion.nombres %>
-        <% const  docs_sz =   items.myDocs.length %>
-        <% const  docs =   items.myDocs %>
+            <% const nombres_sz=items.myObject.tablaPlanificacion.nombres.length %>
+                <% const nombres=items.myObject.tablaPlanificacion.nombres %>
+                    <% const docs_sz=items.myDocs.length %>
+                        <% const docs=items.myDocs %>
 
-        <% const  nombre =   items.myDocs[0]._id %>
+                            <% const nombre=items.myDocs[0]._id %>
 
-        <div class="cardInside3">
-            <table id="planification" class="table table-bordered table-striped table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <% for (var i=0; i< nombres_sz; i++) { %>
-                        <th scope="col"><%= nombres[i] %></th>
-                        <% } %>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <% for (var i=0; i < docs_sz; i++) { %>
-                        <td> <%= items.myDocs[i]._id  %> </td>
-                        <td> <%= items.myDocs[i].dias  %> </td>
-                        <td>
-                            <% for (var j=0; j < items.myDocs[i].menus.length; j++) { %>
-                            <b> <%=items.myObject.tablaPlanificacion.tablaDetalles[0] %> <%= j+1 %>: </b>
-                            <% for (var k=0; k < items.myDocs[i].menus[j].length; k++) { %>
+                                <div class="cardInside3">
+                                    <table id="planification"
+                                        class="table table-bordered table-striped table-hover table-sm">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <% for (var i=0; i< nombres_sz; i++) { %>
+                                                    <th scope="col">
+                                                        <%= nombres[i] %>
+                                                    </th>
+                                                    <% } %>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <% for (var i=0; i < docs_sz; i++) { %>
+                                                    <td>
+                                                        <%= items.myDocs[i]._id %>
+                                                    </td>
+                                                    <td>
+                                                        <%= items.myDocs[i].dias %>
+                                                    </td>
+                                                    <td>
+                                                        <% for (var j=0; j < items.myDocs[i].menus.length; j++) { %>
+                                                            <b>
+                                                                <%=items.myObject.tablaPlanificacion.tablaDetalles[0] %>
+                                                                    <%= j+1 %>:
+                                                            </b>
+                                                            <% for (var k=0; k < items.myDocs[i].menus[j].length; k++) {
+                                                                %>
 
-                            <% if ((k+1) < items.myDocs[i].menus[j].length) { %>
-                            <%= items.myDocs[i].menus[j][k]._id  %> <br>
-                            <% } else{ %>
-                            <%= items.myDocs[i].menus[j][k]._id  %>
+                                                                <% if ((k+1) < items.myDocs[i].menus[j].length) { %>
+                                                                    <%= items.myDocs[i].menus[j][k]._id %> <br>
+                                                                        <% } else{ %>
+                                                                            <%= items.myDocs[i].menus[j][k]._id %>
 
-                            <% } %>
-                            <% } %>
+                                                                                <% } %>
+                                                                                    <% } %>
 
-                            <% if (j+1 !== items.myDocs[i].menus.length ) { %>
-                            <br>
-                            <hr>
-                            <% } else{  %>
-                            <br>
-                            <% } %>
+                                                                                        <% if (j+1
+                                                                                            !==items.myDocs[i].menus.length
+                                                                                            ) { %>
+                                                                                            <br>
+                                                                                            <hr>
+                                                                                            <% } else{ %>
+                                                                                                <br>
+                                                                                                <% } %>
 
-                            <% } %>
-                            <% if (items.req.user.rol === "default"){ %>
-                        <td>
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/planification/<%=docs[i]['_id']%>"><i
-                                        class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/planification/download/<%=docs[i]['_id']%>"><i
-                                        class="far fa-file-alt"></i></a></button></td>
-                        <% } else{ %>
+                                                                                                    <% } %>
+                                                                                                        <% if
+                                                                                                            (items.req.user.rol==="default"
+                                                                                                            ){ %>
+                                                    <td>
+                                                        <button type="button" class="btn btn-info"><a
+                                                                title="Ver detalles"
+                                                                href="/planification/<%=docs[i]['_id']%>"><i
+                                                                    class="fas fa-search-plus"></i></a></button>
+                                                        <button type="button" class="btn btn-success"><a
+                                                                title="Descargar"
+                                                                href="/planification/download/<%=docs[i]['_id']%>"><i
+                                                                    class="far fa-file-alt"></i></a></button>
+                                                    </td>
+                                                    <% } else{ %>
 
-                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
-                                    href="/planification/delete/<%=docs[i]['_id']%>"> <i
-                                        class="fas fa-trash-alt"></i></a></button>
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/planification/<%=docs[i]['_id']%>"><i
-                                        class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-warning"><a title="Editar"
-                                    href="/planification/update/<%=docs[i]['_id']%>"><i
-                                        class="fas fa-edit"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/planification/download/<%=docs[i]['_id']%>"><i
-                                        class="far fa-file-alt"></i></a></button></td>
+                                                        <td> <button type="button" class="btn btn-danger"><a
+                                                                    title="Eliminar"
+                                                                    href="/planification/delete/<%=docs[i]['_id']%>"> <i
+                                                                        class="fas fa-trash-alt"></i></a></button>
+                                                            <button type="button" class="btn btn-info"><a
+                                                                    title="Ver detalles"
+                                                                    href="/planification/<%=docs[i]['_id']%>"><i
+                                                                        class="fas fa-search-plus"></i></a></button>
+                                                            <button type="button" class="btn btn-warning"><a
+                                                                    title="Editar"
+                                                                    href="/planification/update/<%=docs[i]['_id']%>"><i
+                                                                        class="fas fa-edit"></i></a></button>
+                                                            <button type="button" class="btn btn-success"><a
+                                                                    title="Descargar"
+                                                                    href="/planification/download/<%=docs[i]['_id']%>"><i
+                                                                        class="far fa-file-alt"></i></a></button>
+                                                        </td>
 
 
-                        <% } %>
+                                                        <% } %>
 
 
 
-                    </tr>
+                                            </tr>
 
-                    <% } %>
-                    </td>
+                                            <% } %>
+                                                </td>
 
 
-                </tbody>
-            </table>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <br>
+
         </div>
-        <br>
-
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 
 </body>
 <script>
