--- a/views/planification/insertPlanificationJson.ejs
+++ b/views/planification/insertPlanificationJson.ejs
@@ -45,44 +45,50 @@
     <%- include ("../partials/navigation.ejs"); %>
 
 
-    <div class="container">
-        <div class="cardInside2">
-            <h1><%= items.myObject.planificacion.title %></h1>
+        <div class="container">
+            <div class="cardInside2">
+                <h1>
+                    <%= items.myObject.planificacion.title %>
+                </h1>
+            </div>
+            <br>
+            <%- include ("../partials/message.ejs"); %>
+                <div class="cardJson">
+                    <br>
+
+                    <p class="ejemplo">
+                        <%= items.myObject.jsonPlanification.ejemplo %>
+                    </p>
+                    <div class="d-flex justify-content-center align-items-center p-3 texto">
+                        <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
+                    </div>
+
+
+                    <form method="POST" enctype="multipart/form-data">
+                        <div class="form-group">
+
+                            <br> <br>
+
+                            <i class="fas fa-file-upload fa-3x m-auto text-info">
+                                <label for="avatar">
+                                    <%= items.myObject.jsonPlanification.label %>
+                                </label><br></i>
+                            <br> <br>
+
+                            <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
+                            <br><br>
+
+                            <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+
+                        </div>
+                    </form>
+
+
+                    <br>
+                </div>
         </div>
         <br>
-        <%- include ("../partials/message.ejs"); %>
-        <div class="cardJson">
-            <br>
-
-            <p class="ejemplo"><%= items.myObject.jsonPlanification.ejemplo %></p>
-            <div class="d-flex justify-content-center align-items-center p-3 texto">
-                <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
-            </div>
-
-
-            <form method="POST" enctype="multipart/form-data">
-                <div class="form-group">
-
-                    <br> <br>
-
-                    <i class="fas fa-file-upload fa-3x m-auto text-info">
-                        <label for="avatar"><%= items.myObject.jsonPlanification.label %></label><br></i>
-                    <br> <br>
-
-                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
-                    <br><br>
-
-                    <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
-
-                </div>
-            </form>
-
-
-            <br>
-        </div>
-    </div>
-    <br>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 <script>
