--- a/views/planification/planification.ejs
+++ b/views/planification/planification.ejs
@@ -8,11 +8,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        
-        <!-- JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -23,35 +29,47 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <main role="main">
-        <div class="jumbotronPlanificacion center-block">
-            <div class="jilorioInfo planificacion">
-                <h1  class="display-4"> <%= items.myObject.jilorioInfo[3].planification.title %> </h1>
-                <p  style="text-align: center;" ><%= items.myObject.jilorioInfo[3].planification.description%></p>
-            </div>
-        </div>
-        <div class="container">
-            <section class="features-icons text-center">
-
-                <div class="row">
-                    <% for (var i=0; i < items.myObject.planificationIndex.length; i++) { %>
-                    <div class="col-md-4">
-                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 245px;">
-                            <div class="features-icons-icon d-flex">
-                                <i class="<%= items.myObject.planificationIndex[i].icon%> fa-3x m-auto text-info"></i>
-                            </div>
-                            <div class="feature features-icons-icon"><%= items.myObject.planificationIndex[i].name %></div>
-                            <p class="text-justify"><%= items.myObject.planificationIndex[i].description %> </p>
-                            </div>
-                            <p><a class="btn btn-info" href="<%= items.myObject.planificationIndex[i].href %>" role="button"><%= items.myObject.planificationIndex[i].button %> &raquo;</a></p>
-                      
-                    </div>
-                    <% } %>
+        <main role="main">
+            <div class="jumbotronPlanificacion center-block">
+                <div class="jilorioInfo planificacion">
+                    <h1 class="display-4">
+                        <%= items.myObject.jilorioInfo[3].planification.title %>
+                    </h1>
+                    <p style="text-align: center;">
+                        <%= items.myObject.jilorioInfo[3].planification.description%>
+                    </p>
                 </div>
-                <hr style="border-color: rgb(46, 115, 124);">
-        </div>
-    </main>
-    <%- include ("../partials/footer.ejs"); %>
+            </div>
+            <div class="container">
+                <section class="features-icons text-center">
+
+                    <div class="row">
+                        <% for (var i=0; i < items.myObject.planificationIndex.length; i++) { %>
+                            <div class="col-md-4">
+                                <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 245px;">
+                                    <div class="features-icons-icon d-flex">
+                                        <i
+                                            class="<%= items.myObject.planificationIndex[i].icon%> fa-3x m-auto text-info"></i>
+                                    </div>
+                                    <div class="feature features-icons-icon">
+                                        <%= items.myObject.planificationIndex[i].name %>
+                                    </div>
+                                    <p class="text-justify">
+                                        <%= items.myObject.planificationIndex[i].description %>
+                                    </p>
+                                </div>
+                                <p><a class="btn btn-info" href="<%= items.myObject.planificationIndex[i].href %>"
+                                        role="button">
+                                        <%= items.myObject.planificationIndex[i].button %> &raquo;
+                                    </a></p>
+
+                            </div>
+                            <% } %>
+                    </div>
+                    <hr style="border-color: rgb(46, 115, 124);">
+            </div>
+        </main>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
