--- a/views/planification/planificationDetails.ejs
+++ b/views/planification/planificationDetails.ejs
@@ -35,111 +35,129 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <div class="container">
-        <div class="infoPage">
-            <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myDocs._id %> </span>
-        </div>
-        <hr style="border-color: rgb(46, 115, 124);">
-        <div class="row justify-content-between espaciado" style="margin-top: 25px;">
-            <div class="col-11 "  style="margin-top: 25px;">
-                <p class="descriptionDish"> <%= items.myDocs.description %> </p>
+        <div class="container">
+            <div class="infoPage">
+                <i class="fas fa-list-alt fa-2x"></i>
+                <span>
+                    <%= items.myDocs._id %>
+                </span>
             </div>
+            <hr style="border-color: rgb(46, 115, 124);">
+            <div class="row justify-content-between espaciado" style="margin-top: 25px;">
+                <div class="col-11 " style="margin-top: 25px;">
+                    <p class="descriptionDish">
+                        <%= items.myDocs.description %>
+                    </p>
+                </div>
+            </div>
+            <div class="cardInside3">
+                <span class="detailsSpan">
+                    <%= items.myObject.tablaPlanificacion.titleTabla %>
+                </span>
+            </div>
+            <% const nombres_sz=items.myObject.tablaPlanificacion.nombres.length %>
+                <% const nombres=items.myObject.tablaPlanificacion.nombres %>
+                    <% const docs_sz=items.myDocs.length %>
+                        <% const docs=items.myDocs %>
+
+
+
+                            <table class="table table-striped table-bordered table-hover table-sm">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <% for (let i=0; i < items.myObject.tablaPlanificacion.tablaDetalles.length;
+                                            i++) {%>
+                                            <th>
+                                                <%= items.myObject.tablaPlanificacion.tablaDetalles[i] %>
+                                            </th>
+                                            <% } %>
+                                    </tr>
+
+                                </thead>
+                                <tbody>
+
+                                    <tr>
+                                        <% for (var i=0; i < items.myDocs.menus.length; i++) { %>
+                                            <td> <b>
+                                                    <%= i+1 %>
+                                                </b> </td>
+                                            <td>
+                                                <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
+
+                                                    <% if ((j+1) < items.myDocs.menus[i].length) { %>
+                                                        <%= items.myDocs.menus[i][j]._id %>
+                                                            <% } else{ %>
+                                                                <%= items.myDocs.menus[i][j]._id %>
+
+
+                                                                    <% } %>
+                                                                        <br>
+
+                                                                        <% } %>
+                                            </td>
+                                            <td>
+                                                <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
+
+                                                    <% for (var k=0; k < items.myDocs.menus[i][j].dishes.length; k++) {
+                                                        %>
+                                                        <% if ((k+1) < items.myDocs.menus[i][j].dishes.length) { %>
+                                                            <%= items.myDocs.menus[i][j].dishes[k]._id %> <b> | </b>
+                                                                <% } else{ %>
+                                                                    <%= items.myDocs.menus[i][j].dishes[k]._id %>
+                                                                        <br>
+                                                                        <% } %>
+
+                                                                            <% } %>
+
+
+                                                                                <% } %>
+
+
+                                            </td>
+
+                                    </tr>
+                                    <% } %>
+
+
+                                </tbody>
+                            </table>
+
+
+
+                            <div class="cardInside3">
+                                <span class="detailsSpan">
+                                    <%= items.myObject.tablaPlanificacion.titleTablaNut %>
+                                </span>
+                            </div>
+
+                            <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
+
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
+                                            <th>
+                                                <%= items.myObject.tablaPlatos.nutrientes[i] %>
+                                            </th>
+                                            <% } %>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+
+                                        <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
+                                            <td>
+                                                <%= items.myNutrients[i] %>
+                                            </td>
+                                            <% } %>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                            <br>
+
+
         </div>
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.tablaPlanificacion.titleTabla %></span>
-        </div>
-        <% const  nombres_sz=  items.myObject.tablaPlanificacion.nombres.length %>
-        <% const  nombres=  items.myObject.tablaPlanificacion.nombres %>
-        <% const  docs_sz =   items.myDocs.length %>
-        <% const  docs =   items.myDocs %>
-
-
-
-        <table class="table table-striped table-bordered table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (let i=0; i < items.myObject.tablaPlanificacion.tablaDetalles.length; i++) {%>
-                    <th><%= items.myObject.tablaPlanificacion.tablaDetalles[i] %> </th>
-                    <% } %>
-                </tr>
-
-            </thead>
-            <tbody>
-
-                <tr>
-                    <% for (var i=0; i < items.myDocs.menus.length; i++) { %>
-                    <td> <b> <%= i+1 %> </b> </td>
-                    <td>
-                        <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
-
-                        <% if ((j+1) < items.myDocs.menus[i].length) { %>
-                        <%= items.myDocs.menus[i][j]._id  %>
-                        <% } else{ %>
-                        <%= items.myDocs.menus[i][j]._id  %>
-
-
-                        <% } %>
-                        <br>
-
-                        <% } %>
-                    </td>
-                    <td>
-                        <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
-
-                        <% for (var k=0; k < items.myDocs.menus[i][j].dishes.length; k++) { %>
-                        <% if ((k+1) < items.myDocs.menus[i][j].dishes.length) { %>
-                        <%= items.myDocs.menus[i][j].dishes[k]._id %> <b> | </b>
-                        <% } else{ %>
-                        <%= items.myDocs.menus[i][j].dishes[k]._id %>
-                        <br>
-                        <% } %>
-
-                        <% } %>
-
-
-                        <% } %>
-
-
-                    </td>
-
-                </tr>
-                <% } %>
-
-
-            </tbody>
-        </table>
-
-
-
-        <div class="cardInside3">
-            <span class="detailsSpan"><%= items.myObject.tablaPlanificacion.titleTablaNut %></span>
-        </div>
-
-        <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
-
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) { %>
-                    <th><%= items.myObject.tablaPlatos.nutrientes[i] %> </th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-
-                    <% for (var i=0; i < items.myObject.tablaPlatos.nutrientes.length; i++) {%>
-                    <td><%= items.myNutrients[i] %> </td>
-                    <% } %>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
