--- a/views/recommendation/recommendation.ejs
+++ b/views/recommendation/recommendation.ejs
@@ -31,36 +31,46 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <main role="main">
-        <div class="jumbotronRecommendation center-block">
-            <div class="jilorioInfo recommendation">
-                <h1 class="display-4"> <%= items.myObject.jilorioInfo[4].recommendation.title %> </h1>
-                <p style="text-align: center;"><%= items.myObject.jilorioInfo[4].recommendation.description%></p>
-            </div>
-        </div>
-        <div class="container">
-            <section class="features-icons text-center">
-
-                <div class="row">
-                    <% for (var i=0; i < items.myObject.recommendationIndex.length; i++) { %>
-                    <div class="col-md-4">
-                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 245px;">
-                            <div class="features-icons-icon d-flex">
-                                <i class="<%= items.myObject.recommendationIndex[i].icon%> fa-3x m-auto text-info"></i>
-                            </div>
-                            <div class="feature features-icons-icon"> <%= items.myObject.recommendationIndex[i].name %>
-                            </div>
-                            <p class="text-justify"><%= items.myObject.recommendationIndex[i].description %> </p>
-                        </div>
-                        <p><a class="btn btn-info" href="<%= items.myObject.recommendationIndex[i].href %>"
-                                role="button"><%= items.myObject.recommendationIndex[i].button %> &raquo;</a></p>
-                    </div>
-                    <% } %>
+        <main role="main">
+            <div class="jumbotronRecommendation center-block">
+                <div class="jilorioInfo recommendation">
+                    <h1 class="display-4">
+                        <%= items.myObject.jilorioInfo[4].recommendation.title %>
+                    </h1>
+                    <p style="text-align: center;">
+                        <%= items.myObject.jilorioInfo[4].recommendation.description%>
+                    </p>
                 </div>
-                <hr style="border-color: rgb(46, 115, 124);">
-        </div>
-    </main>
-    <%- include ("../partials/footer.ejs"); %>
+            </div>
+            <div class="container">
+                <section class="features-icons text-center">
+
+                    <div class="row">
+                        <% for (var i=0; i < items.myObject.recommendationIndex.length; i++) { %>
+                            <div class="col-md-4">
+                                <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 245px;">
+                                    <div class="features-icons-icon d-flex">
+                                        <i
+                                            class="<%= items.myObject.recommendationIndex[i].icon%> fa-3x m-auto text-info"></i>
+                                    </div>
+                                    <div class="feature features-icons-icon">
+                                        <%= items.myObject.recommendationIndex[i].name %>
+                                    </div>
+                                    <p class="text-justify">
+                                        <%= items.myObject.recommendationIndex[i].description %>
+                                    </p>
+                                </div>
+                                <p><a class="btn btn-info" href="<%= items.myObject.recommendationIndex[i].href %>"
+                                        role="button">
+                                        <%= items.myObject.recommendationIndex[i].button %> &raquo;
+                                    </a></p>
+                            </div>
+                            <% } %>
+                    </div>
+                    <hr style="border-color: rgb(46, 115, 124);">
+            </div>
+        </main>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
