--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -33,73 +33,87 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <div class="container">
-        <div class="alerts">
-            <%- include ("../partials/message.ejs"); %>
-        </div>
+        <div class="container">
+            <div class="alerts">
+                <%- include ("../partials/message.ejs"); %>
+            </div>
 
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="card beauty_login">
-                <div class="card-header">
-                    <div class="logo"><img
-                            src="https://cdn.pixabay.com/photo/2016/11/14/17/39/person-1824144_960_720.png" alt="">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="card beauty_login">
+                    <div class="card-header">
+                        <div class="logo"><img
+                                src="https://cdn.pixabay.com/photo/2016/11/14/17/39/person-1824144_960_720.png" alt="">
+                        </div>
+                        <div class="login_text d-flex flex-row justify-content-center align-items-center">
+                            <span></span>
+                            <span class="text px-1">
+                                <%= items.myObject.login.principal %>
+                            </span>
+                            <span></span>
+                        </div>
+                        <div class="login_with_text">
+                            <span>
+                                <%= items.myObject.login.texto %>
+                            </span>
+                        </div>
                     </div>
-                    <div class="login_text d-flex flex-row justify-content-center align-items-center">
-                        <span></span>
-                        <span class="text px-1"><%= items.myObject.login.principal %></span>
-                        <span></span>
-                    </div>
-                    <div class="login_with_text">
-                        <span><%= items.myObject.login.texto %> </span>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="login_container d-flex flex-column">
-                        <form method="POST">
-                            <br>
+                    <div class="card-body">
+                        <div class="login_container d-flex flex-column">
+                            <form method="POST">
+                                <br>
 
-                            <% for (var i=0; i< items.myObject.login.form.length; i++) { %>
+                                <% for (var i=0; i< items.myObject.login.form.length; i++) { %>
 
-                            <label><%= items.myObject.login.form[i].label %></label><span class="required">*</span>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <% if (items.myObject.login.form[i].name === "username")  {%>
-                                    <span class="input-group-text" id="basic-addon1">@</span>
-                                    <% } else {%>
-                                    <span class="input-group-text" id="basic-addon1"><i
-                                            class="<%= items.myObject.login.form[i].icon %>"></i></span>
+                                    <label>
+                                        <%= items.myObject.login.form[i].label %>
+                                    </label><span class="required">*</span>
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <% if (items.myObject.login.form[i].name==="username" ) {%>
+                                                <span class="input-group-text" id="basic-addon1">@</span>
+                                                <% } else {%>
+                                                    <span class="input-group-text" id="basic-addon1"><i
+                                                            class="<%= items.myObject.login.form[i].icon %>"></i></span>
+                                                    <% } %>
+                                        </div>
+                                        <input autocomplete="off" type="<%= items.myObject.login.form[i].type %>"
+                                            class="form-control"
+                                            placeholder="<%= items.myObject.login.form[i].placeholder %>"
+                                            aria-label="<%= items.myObject.login.form[i].ariaLabel %>"
+                                            aria-describedby="basic-addon1"
+                                            name="<%= items.myObject.login.form[i].name %>"
+                                            #<%=items.myObject.login.form[i].name %> required>
+                                    </div>
                                     <% } %>
-                                </div>
-                                <input autocomplete="off" type="<%= items.myObject.login.form[i].type %>"
-                                    class="form-control" placeholder="<%= items.myObject.login.form[i].placeholder %>"
-                                    aria-label="<%= items.myObject.login.form[i].ariaLabel %>"
-                                    aria-describedby="basic-addon1" name="<%= items.myObject.login.form[i].name %>"
-                                    #<%= items.myObject.login.form[i].name %> required>
-                            </div>
-                            <% } %>
-                            <div class="requiredSpan">
-                                <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
-                                    class="required">*</span>
-                            </div>
-                            <br>
-                            <div class="d-flex justify-content-center align-items-center">
-                                <button class="btn btn-info" type="submit"><%= items.myObject.login.button %></button>
-                            </div>
+                                        <div class="requiredSpan">
+                                            <span class="text-muted requiredSpan">
+                                                <%= items.myObject.required %>
+                                            </span><span class="required">*</span>
+                                        </div>
+                                        <br>
+                                        <div class="d-flex justify-content-center align-items-center">
+                                            <button class="btn btn-info" type="submit">
+                                                <%= items.myObject.login.button %>
+                                            </button>
+                                        </div>
 
-                        </form>
+                            </form>
+                        </div>
                     </div>
-                </div>
-                <div class="card-footer d-flex flex-column ">
-                    <div class="d-flex justify-content-center align-items-center p-3 texto">
-                        <span><%= items.myObject.login.pregunta %></span><a href="<%= items.myObject.login.href %>"
-                            class="ml-2"><%= items.myObject.login.click %></a>
+                    <div class="card-footer d-flex flex-column ">
+                        <div class="d-flex justify-content-center align-items-center p-3 texto">
+                            <span>
+                                <%= items.myObject.login.pregunta %>
+                            </span><a href="<%= items.myObject.login.href %>" class="ml-2">
+                                <%= items.myObject.login.click %>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <br>
         </div>
-        <br>
-    </div>
-    <%- include ("../partials/footer.ejs"); %>
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
