--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        <!-- JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,73 +33,87 @@
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
-    <div class="container">
-        <div class="alerts">
-            <%- include ("../partials/message.ejs"); %>
-        </div>
-
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="card beauty_login">
-                <div class="card-header">
-                    <div class="logo"><img
-                            src="https://cdn.pixabay.com/photo/2016/11/14/17/39/person-1824144_960_720.png"
-                            alt=""></div>
-                    <div class="login_text d-flex flex-row justify-content-center align-items-center">
-                        <span></span>
-                        <span class="text px-1"><%= items.myObject.register.principal %></span>
-                        <span></span>
-                    </div>
-                    <div class="login_with_text">
-                        <span><%= items.myObject.register.texto %></span>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="login_container d-flex flex-column">
-                        <form method="POST" , action='./register'>
-                            <br>
-                            <% for (var i=0; i< items.myObject.register.form.length; i++) { %>
-                            <label><%= items.myObject.register.form[i].label %></label><span class="required">*</span>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <% if (items.myObject.register.form[i].name === "username")  {%>
-                                    <span class="input-group-text" id="basic-addon1">@</span>
-                                    <% } else {%>
-                                    <span class="input-group-text" id="basic-addon1"><i
-                                            class="<%= items.myObject.register.form[i].icon %>"></i></span>
-                                    <% } %>
-                                </div>
-                                <input type="<%= items.myObject.register.form[i].type %>" class="form-control"
-                                    placeholder="<%= items.myObject.register.form[i].placeholder %>"
-                                    aria-label="<%= items.myObject.register.form[i].ariaLabel %>"
-                                    aria-describedby="basic-addon1" name="<%= items.myObject.register.form[i].name %>"
-                                    #<%= items.myObject.register.form[i].name %> required>
-                            </div>
-                            <% } %>
-                            <div class="requiredSpan">
-                                <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
-                                    class="required">*</span>
-                            </div>
-                            <br>
-                            <div class="d-flex justify-content-center align-items-center p-3 texto">
-                            <button class="btn btn-info" type="submit"><%= items.myObject.register.button %></button>
-                        </div>
-                        </form>
-                        
-                    </div>
-                </div>
-                <div class="card-footer d-flex flex-column">
-                    <div class="d-flex justify-content-center align-items-center p-3 texto">
-                        <span><%= items.myObject.register.pregunta %></span> <a href="<%= items.myObject.register.href %>" class="ml-2"><%= items.myObject.register.click %></a>
-                    </div>
-                </div>
+        <div class="container">
+            <div class="alerts">
+                <%- include ("../partials/message.ejs"); %>
             </div>
-     
-        </div>
-    
-<br>
-    </div>
 
-    <%- include ("../partials/footer.ejs"); %>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="card beauty_login">
+                    <div class="card-header">
+                        <div class="logo"><img
+                                src="https://cdn.pixabay.com/photo/2016/11/14/17/39/person-1824144_960_720.png" alt="">
+                        </div>
+                        <div class="login_text d-flex flex-row justify-content-center align-items-center">
+                            <span></span>
+                            <span class="text px-1">
+                                <%= items.myObject.register.principal %>
+                            </span>
+                            <span></span>
+                        </div>
+                        <div class="login_with_text">
+                            <span>
+                                <%= items.myObject.register.texto %>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="login_container d-flex flex-column">
+                            <form method="POST" , action='./register'>
+                                <br>
+                                <% for (var i=0; i< items.myObject.register.form.length; i++) { %>
+                                    <label>
+                                        <%= items.myObject.register.form[i].label %>
+                                    </label><span class="required">*</span>
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <% if (items.myObject.register.form[i].name==="username" ) {%>
+                                                <span class="input-group-text" id="basic-addon1">@</span>
+                                                <% } else {%>
+                                                    <span class="input-group-text" id="basic-addon1"><i
+                                                            class="<%= items.myObject.register.form[i].icon %>"></i></span>
+                                                    <% } %>
+                                        </div>
+                                        <input type="<%= items.myObject.register.form[i].type %>" class="form-control"
+                                            placeholder="<%= items.myObject.register.form[i].placeholder %>"
+                                            aria-label="<%= items.myObject.register.form[i].ariaLabel %>"
+                                            aria-describedby="basic-addon1"
+                                            name="<%= items.myObject.register.form[i].name %>"
+                                            #<%=items.myObject.register.form[i].name %> required>
+                                    </div>
+                                    <% } %>
+                                        <div class="requiredSpan">
+                                            <span class="text-muted requiredSpan">
+                                                <%= items.myObject.required %>
+                                            </span><span class="required">*</span>
+                                        </div>
+                                        <br>
+                                        <div class="d-flex justify-content-center align-items-center p-3 texto">
+                                            <button class="btn btn-info" type="submit">
+                                                <%= items.myObject.register.button %>
+                                            </button>
+                                        </div>
+                            </form>
+
+                        </div>
+                    </div>
+                    <div class="card-footer d-flex flex-column">
+                        <div class="d-flex justify-content-center align-items-center p-3 texto">
+                            <span>
+                                <%= items.myObject.register.pregunta %>
+                            </span> <a href="<%= items.myObject.register.href %>" class="ml-2">
+                                <%= items.myObject.register.click %>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <br>
+        </div>
+
+        <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
